添加“商品”、“支持”页面

--- a/about.html
+++ b/about.html
@@ -70,6 +70,7 @@
 									</li>								
 									<li><a href="gallery.html">Gallery</a></li>
 									<li><a href="blog.html">Blog</a></li>
+									<li><a href="good.html">Good</a></li>
 									<li><a href="contact.html">Contact</a></li>
 								</ul>	
 								<div class="clearfix"> </div>
@@ -263,8 +264,8 @@
 					<h4>Navigation</h4>
 					<div class="col-md-6 footer-grid-left">
 						<ul>
-							<li><a class="active" href="index.html">Home</a></li>
-							<li><a href="about.html">About</a></li>								
+							<li><a href="index.html">Home</a></li>
+							<li><a class="active"  href="about.html">About</a></li>
 							<li><a href="gallery.html">Gallery</a></li>
 							<li><a href="icons.html">Icons</a></li>
 						</ul>
