--- a/single.html
+++ b/single.html
@@ -71,6 +71,7 @@
 									</li>								
 									<li><a href="gallery.html">Gallery</a></li>
 									<li><a class="active" href="blog.html">Blog</a></li>
+									<li><a href="good.html">Good</a></li>
 									<li><a href="contact.html">Contact</a></li>
 								</ul>	
 								<div class="clearfix"> </div>
