--- a/typography.html
+++ b/typography.html
@@ -70,6 +70,7 @@
 									</li>								
 									<li><a href="gallery.html">Gallery</a></li>
 									<li><a href="blog.html">Blog</a></li>
+									<li><a href="good.html">Good</a></li>
 									<li><a href="contact.html">Contact</a></li>
 								</ul>
 								<div class="clearfix"> </div>
