完善新增的页面

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                   <ul class="dropdown-menu">
                     <li><a class="hvr-bounce-to-bottom" href="icons.html">Icons</a></li>
                     <li><a class="hvr-bounce-to-bottom" href="typography.html">Typography</a></li>
+                    <li><a class="hvr-bounce-to-bottom" href="publish.html">Publish</a></li>
                   </ul>
                 </li>
                 <li><a href="gallery.html">Gallery</a></li>
