--- a/support.html
+++ b/support.html
@@ -143,7 +143,7 @@
   <!-- //about-top -->
 
   <!-- 精选 -->
-  <div class="team">
+  <div class="">
     <div class="container">
       <div class="agile_team_grids">
         <div class="col-md-3 agile_team_grid">
