--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Contact</title>
+<title>联系我们</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="utf-8">
 <meta name="keywords" content="" />
@@ -60,18 +60,23 @@
 							<!-- Collect the nav links, forms, and other content for toggling -->
 							<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 								<ul class="nav navbar-nav">
-									<li><a href="index.html">Home</a></li>
-									<li><a href="about.html">About</a></li>
-									<li class=""><a href="#" class="dropdown-toggle hvr-bounce-to-bottom" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Codes<span class="caret"></span></a>
+									<li><a href="index.html">首页</a></li>
+									<li><a href="about.html">关于</a></li>
+									<li class=""><a href="#" class="dropdown-toggle hvr-bounce-to-bottom" data-toggle="dropdown"
+                                role="button" aria-haspopup="true" aria-expanded="false">
+                    发布<span class="caret"></span>
+                  </a>
 										<ul class="dropdown-menu">
 											<li><a class="hvr-bounce-to-bottom" href="icons.html">Icons</a></li>
-											<li><a class="hvr-bounce-to-bottom" href="typography.html">Typography</a></li>          
+                    <li><a class="hvr-bounce-to-bottom" href="typography.html">Typography</a></li>
+                    <li><a class="hvr-bounce-to-bottom" href="publish.html">发布求助</a></li>
 										</ul>
 									</li>								
 									<li><a href="gallery.html">Gallery</a></li>
 									<li><a href="blog.html">Blog</a></li>
-									<li><a href="good.html">Good</a></li>
-									<li><a class="active" href="contact.html">Contact</a></li>
+									<li><a href="good.html">商城</a></li>
+                <li><a href="support.html">支持</a></li>
+									<li><a class="active" href="contact.html">联系我们</a></li>
 								</ul>	
 								<div class="clearfix"> </div>
 							</div>	
@@ -154,8 +159,8 @@
 					<h4>Navigation</h4>
 					<div class="col-md-6 footer-grid-left">
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="about.html">About</a></li>								
+							<li><a href="index.html">首页</a></li>
+							<li><a href="about.html">关于</a></li>
 							<li><a href="gallery.html">Gallery</a></li>
 							<li><a href="icons.html">Icons</a></li>
 						</ul>
@@ -164,7 +169,7 @@
 						<ul>
 							<li><a href="typography.html">Typography</a></li>
 							<li><a href="blog.html">Blog</a></li>
-							<li><a href="contact.html">Contact</a></li>
+							<li><a href="contact.html">联系我们</a></li>
 						</ul>
 					</div>
 					<div class="clearfix"> </div>
