--- a/publish.html
+++ b/publish.html
@@ -66,19 +66,20 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li class=""><a href="#" class="dropdown-toggle hvr-bounce-to-bottom active" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Codes<span class="caret"></span></a>
+                <li><a href="index.html">首页</a></li>
+                <li><a href="about.html">关于</a></li>
+                <li class=""><a href="#" class="dropdown-toggle hvr-bounce-to-bottom active" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">发布<span class="caret"></span></a>
                   <ul class="dropdown-menu">
                     <li><a class="hvr-bounce-to-bottom" href="icons.html">Icons</a></li>
                     <li><a class="hvr-bounce-to-bottom" href="typography.html">Typography</a></li>
-                    <li><a class="hvr-bounce-to-bottom active" href="publish.html">Publish</a></li>
+                    <li><a class="hvr-bounce-to-bottom active" href="publish.html">发布救助</a></li>
                   </ul>
                 </li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="blog.html">Blog</a></li>
-                <li><a href="good.html">Good</a></li>
-                <li><a class="" href="contact.html">Contact</a></li>
+                <li><a href="good.html">商城</a></li>
+                <li><a href="support.html">支持</a></li>
+                <li><a class="" href="contact.html">联系我们</a></li>
               </ul>
               <div class="clearfix"> </div>
             </div>
@@ -308,8 +309,8 @@
         <h4>Navigation</h4>
         <div class="col-md-6 footer-grid-left">
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="index.html">首页</a></li>
+            <li><a href="about.html">关于</a></li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="icons.html">Icons</a></li>
           </ul>
@@ -318,7 +319,7 @@
           <ul>
             <li><a href="typography.html">Typography</a></li>
             <li><a href="blog.html">Blog</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html">联系我们</a></li>
           </ul>
         </div>
         <div class="clearfix"> </div>
