--- a/typography.html
+++ b/typography.html
@@ -60,8 +60,8 @@
 							<!-- Collect the nav links, forms, and other content for toggling -->
 							<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 								<ul class="nav navbar-nav">
-									<li><a href="index.html">Home</a></li>
-									<li><a href="about.html">About</a></li>
+									<li><a href="index.html">首页</a></li>
+									<li><a href="about.html">关于</a></li>
 									<li class=""><a href="#" class="dropdown-toggle hvr-bounce-to-bottom active" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Codes<span class="caret"></span></a>
 										<ul class="dropdown-menu">
 											<li><a class="hvr-bounce-to-bottom" href="icons.html">Icons</a></li>
@@ -69,9 +69,10 @@
 										</ul>
 									</li>								
 									<li><a href="gallery.html">Gallery</a></li>
-									<li><a href="blog.html">Blog</a></li>
-									<li><a href="good.html">Good</a></li>
-									<li><a href="contact.html">Contact</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="good.html">商城</a></li>
+                <li><a href="support.html">支持</a></li>
+                <li><a href="contact.html">联系我们</a></li>
 								</ul>
 								<div class="clearfix"> </div>
 							</div>	
@@ -310,14 +311,14 @@
 					<div class="grid_3 grid_5 wow fadeInUp animated" data-wow-delay=".5s">
 						<h3 class="hdg">Breadcrumbs</h3>
 						<ol class="breadcrumb">
-							<li class="active">Home</li>
+							<li class="active">首页</li>
 						</ol>
 						<ol class="breadcrumb">
-							<li><a href="#">Home</a></li>
+							<li><a href="#">首页</a></li>
 							<li class="active">Library</li>
 						</ol>
 						<ol class="breadcrumb">
-							<li><a href="#">Home</a></li>
+							<li><a href="#">首页</a></li>
 							<li><a href="#">Library</a></li>
 							<li class="active">Data</li>
 						</ol>
@@ -691,7 +692,7 @@
 					<div class="col-md-6 footer-grid-left">
 						<ul>
 							<li><a class="active" href="index.html">Home</a></li>
-							<li><a href="about.html">About</a></li>								
+							<li><a href="about.html">关于</a></li>
 							<li><a href="gallery.html">Gallery</a></li>
 							<li><a href="icons.html">Icons</a></li>
 						</ul>
@@ -700,7 +701,7 @@
 						<ul>
 							<li><a href="typography.html">Typography</a></li>
 							<li><a href="blog.html">Blog</a></li>
-							<li><a href="contact.html">Contact</a></li>
+							<li><a href="contact.html">联系我们</a></li>
 						</ul>
 					</div>
 					<div class="clearfix"> </div>
