--- a/about.html
+++ b/about.html
@@ -184,10 +184,10 @@
 							<img src="images/t2.jpg" alt=" " class="img-responsive">
 							<div class="p-mask">
 								<ul class="top-links two">
-									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-									<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+									<li><a href="log.html" title="个人中心"><i class="fa fa-user"></i></a></li>
+            <li><a href="log.html" title="登录"><i class="fa fa-user">登录</i></a></li>
+            <li></li>
+            <li><a href="register.html" title="注册"><i class="fa fa-registered">注册</i></a></li>
 								</ul>
 							</div>
 						</div>
@@ -201,10 +201,10 @@
 							<img src="images/t1.jpg" alt=" " class="img-responsive">
 							<div class="p-mask">
 								<ul class="top-links two">
-									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-									<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+									<li><a href="log.html" title="个人中心"><i class="fa fa-user"></i></a></li>
+            <li><a href="log.html" title="登录"><i class="fa fa-user">登录</i></a></li>
+            <li></li>
+            <li><a href="register.html" title="注册"><i class="fa fa-registered">注册</i></a></li>
 								</ul>
 							</div>
 						</div>
@@ -218,10 +218,10 @@
 							<img src="images/t3.jpg" alt=" " class="img-responsive">
 							<div class="p-mask">
 								<ul class="top-links two">
-									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-									<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+									<li><a href="log.html" title="个人中心"><i class="fa fa-user"></i></a></li>
+            <li><a href="log.html" title="登录"><i class="fa fa-user">登录</i></a></li>
+            <li></li>
+            <li><a href="register.html" title="注册"><i class="fa fa-registered">注册</i></a></li>
 								</ul>
 							</div>
 						</div>
@@ -235,10 +235,10 @@
 							<img src="images/t4.jpg" alt=" " class="img-responsive">
 							<div class="p-mask">
 								<ul class="top-links two">
-									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-									<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+									<li><a href="log.html" title="个人中心"><i class="fa fa-user"></i></a></li>
+            <li><a href="log.html" title="登录"><i class="fa fa-user">登录</i></a></li>
+            <li></li>
+            <li><a href="register.html" title="注册"><i class="fa fa-registered">注册</i></a></li>
 								</ul>
 							</div>
 						</div>
