--- a/register.html
+++ b/register.html
@@ -74,7 +74,7 @@
   <div id="register_body_register">
     <label></label>
     <h3>欢迎注册</h3>
-    <span>|已有账号？现在去<a href="log.html">登陆</a></span><br>
+    <span>|已有账号？现在去<a href="index.html">登陆</a></span><br>
     <label>手机号：</label>
     <input type="text" placeholder="建议常用手机号" id="register_phone">
     <div id="phone_tip"></div>
