--- a/typography.html
+++ b/typography.html
@@ -79,13 +79,16 @@
 						</nav>		
 					</div>
 					<div class="agileinfo-social-grids">
-						<ul>
-							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-							<li><a href="#"><i class="fa fa-rss"></i></a></li>
-							<li><a href="#"><i class="fa fa-vk"></i></a></li>
-						</ul>
-					</div>
+          <ul>
+            <li><a href="log.html" title="个人中心"><i class="fa fa-user"></i></a></li>
+            <li><a href="log.html" title="登录"><i class="fa fa-user">登录</i></a></li>
+            <li></li>
+            <li><a href="register.html" title="注册"><i class="fa fa-registered">注册</i></a></li>
+<!--            <li><a href="#"><i class="fa fa-twitter"></i></a></li>-->
+<!--            <li><a href="#"><i class="fa fa-rss"></i></a></li>-->
+<!--            <li><a href="#"><i class="fa fa-vk"></i></a></li>-->
+          </ul>
+        </div>
 					<div class="clearfix"> </div>
 				</div>
 				<div class="clearfix"> </div>
