商城添加商品导航栏，新增详情页面

--- a/about.html
+++ b/about.html
@@ -41,10 +41,13 @@
 			<div class="container">
 				<div class="header-left">
 					<div class="w3layouts-logo">
-						<h1>
-							<a href="index.html">Cat <span>Club</span></a>
-						</h1>
-					</div>
+          <h1>
+            <a href="index.html">
+              <!--              Cat <span>Club</span>-->
+              <img src="https://img.gzzhitu.com/zhitu-api/1554778293916.png" alt="" id="logo">
+            </a>
+          </h1>
+        </div>
 				</div>
 				<div class="header-right">
 					<div class="top-nav">
