--- a/good.html
+++ b/good.html
@@ -57,7 +57,10 @@
       <div class="header-left">
         <div class="w3layouts-logo">
           <h1>
-            <a href="index.html">Cat <span>Club</span></a>
+            <a href="index.html">
+              <!--              Cat <span>Club</span>-->
+              <img src="https://img.gzzhitu.com/zhitu-api/1554778293916.png" alt="" id="logo">
+            </a>
           </h1>
         </div>
       </div>
@@ -91,6 +94,7 @@
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a class="active" href="good.html">商城</a></li>
+                <li><a href="support.html">支持</a></li>
                 <li><a href="contact.html">联系我们</a></li>
               </ul>
               <div class="clearfix"></div>
@@ -120,7 +124,192 @@
   <!--  </div>-->
 </div>
 <!-- //banner -->
-<!-- about -->
+<!--aside-->
+<div id="aside">
+  <aside id="main-left">
+    <ul class="category-list">
+      <li class="category-list-li">
+        <a href="#"><span>手机</span><span> 平板</span><span>电话卡</span> </a>
+        <div class="contents">
+          <ul class="good-list">
+            <li><img src="./images/index_sidenav_img1.jpg">小米手机5
+              <a href="#" class="btn">选购</a>
+            </li>
+            <li><img src="./images/index_sidenav_img1.jpg">小米手机5
+              <a href="#" class="btn">选购</a>
+            </li>
+            <li><img src="./images/index_sidenav_img1.jpg">小米手机5
+              <a href="#" class="btn">选购</a>
+            </li>
+            <li><img src="./images/index_sidenav_img1.jpg">小米手机5</li>
+            <li><img src="./images/index_sidenav_img1.jpg">小米手机5
+              <a href="#" class="btn">选购</a>
+            </li>
+            <li><img src="./images/index_sidenav_img1.jpg">小米手机5
+              <a href="#" class="btn">选购</a>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li class="category-list-li">
+        <a href="#"><span>笔记本<span></a>
+        <div class="contents">
+          <ul class="good-list">
+            <li><img src="./images/index_sidenav_notebook1.jpg">小米笔记本</li>
+            <li><img src="./images/index_sidenav_notebook1.jpg">小米笔记本</li>
+          </ul>
+        </div>
+      </li>
+      <li class="category-list-li">
+        <a href="#"><span>电视</span> <span>盒子</span></a>
+        <div class="contents">
+          <ul class="good-list">
+            <li><img src="./images/index_sidenav_tv1.jpg">小米电视盒子</li>
+            <li><img src="./images/index_sidenav_tv1.jpg">小米电视盒子</li>
+            <li><img src="./images/index_sidenav_tv1.jpg">小米电视盒子</li>
+            <li><img src="./images/index_sidenav_tv1.jpg">小米电视盒子</li>
+            <li><img src="./images/index_sidenav_tv1.jpg">小米电视盒子</li>
+            <li><img src="./images/index_sidenav_tv1.jpg">小米电视盒子</li>
+          </ul>
+          <ul class="good-list">
+            <li><img src="./images/index_sidenav_tv1.jpg">小米电视盒子</li>
+            <li><img src="./images/index_sidenav_tv1.jpg">小米电视盒子</li>
+            <li><img src="./images/index_sidenav_tv1.jpg">小米电视盒子</li>
+            <li><img src="./images/index_sidenav_tv1.jpg">小米电视盒子</li>
+            <li><img src="./images/index_sidenav_tv1.jpg">小米电视盒子</li>
+            <li><img src="./images/index_sidenav_tv1.jpg">小米电视盒子</li>
+          </ul>
+          <ul class="good-list">
+            <li><img src="./images/index_sidenav_tv1.jpg">小米电视盒子</li>
+            <li><img src="./images/index_sidenav_tv1.jpg">小米电视盒子</li>
+            <li><img src="./images/index_sidenav_tv1.jpg">小米电视盒子</li>
+            <li><img src="./images/index_sidenav_tv1.jpg">小米电视盒子</li>
+            <li><img src="./images/index_sidenav_tv1.jpg">小米电视盒子</li>
+            <li><img src="./images/index_sidenav_tv1.jpg">小米电视盒子</li>
+          </ul>
+        </div>
+      </li>
+      <li class="category-list-li">
+        <a href="#"><span>路由器</span> <span>智能硬件</span></a>
+        <div class="contents">
+          <ul class="good-list">
+            <li><img src="./images/index_sidenav_vr1.jpg">小米vr眼镜玩具版</li>
+            <li><img src="./images/index_sidenav_vr1.jpg">小米vr眼镜玩具版</li>
+            <li><img src="./images/index_sidenav_vr1.jpg">小米vr眼镜玩具版</li>
+            <li><img src="./images/index_sidenav_vr1.jpg">小米vr眼镜玩具版</li>
+            <li><img src="./images/index_sidenav_vr1.jpg">小米vr眼镜玩具版</li>
+            <li><img src="./images/index_sidenav_vr1.jpg">小米vr眼镜玩具版</li>
+          </ul>
+          <ul class="good-list">
+            <li><img src="./images/index_sidenav_vr1.jpg">小米vr眼镜玩具版</li>
+            <li><img src="./images/index_sidenav_vr1.jpg">小米vr眼镜玩具版</li>
+            <li><img src="./images/index_sidenav_vr1.jpg">小米vr眼镜玩具版</li>
+            <li><img src="./images/index_sidenav_vr1.jpg">小米vr眼镜玩具版</li>
+            <li><img src="./images/index_sidenav_vr1.jpg">小米vr眼镜玩具版</li>
+            <li><img src="./images/index_sidenav_vr1.jpg">小米vr眼镜玩具版</li>
+          </ul>
+        </div>
+      </li>
+      <li class="category-list-li">
+        <a href="#"><span>移动电源</span> <span>电池</span></a>
+        <div class="contents">
+          <ul class="good-list">
+            <li><img src="./images/index_sidenav_power1.jpg">小米移动电源</li>
+            <li><img src="./images/index_sidenav_power1.jpg">小米移动电源</li>
+            <li><img src="./images/index_sidenav_power1.jpg">小米移动电源</li>
+            <li><img src="./images/index_sidenav_power1.jpg">小米移动电源</li>
+            <li><img src="./images/index_sidenav_power1.jpg">小米移动电源</li>
+          </ul>
+          <ul class="good-list">
+            <li><img src="./images/index_sidenav_power1.jpg">小米移动电源</li>
+            <li><img src="./images/index_sidenav_power1.jpg">小米移动电源</li>
+            <li><img src="./images/index_sidenav_power1.jpg">小米移动电源</li>
+            <li><img src="./images/index_sidenav_power1.jpg">小米移动电源</li>
+            <li><img src="./images/index_sidenav_power1.jpg">小米移动电源</li>
+          </ul>
+          <ul class="good-list">
+            <li><img src="./images/index_sidenav_power1.jpg">小米移动电源</li>
+            <li><img src="./images/index_sidenav_power1.jpg">小米移动电源</li>
+            <li><img src="./images/index_sidenav_power1.jpg">小米移动电源</li>
+          </ul>
+        </div>
+      </li>
+      <li class="category-list-li">
+        <a href="#"><span>耳机</span> <span>音箱</span></a>
+        <div class="contents">
+          <ul class="good-list">
+            <li><img src="./images/index_sidenav_earphone1.jpg">小米头戴式耳机</li>
+            <li><img src="./images/index_sidenav_earphone1.jpg">小米头戴式耳机</li>
+            <li><img src="./images/index_sidenav_earphone1.jpg">小米头戴式耳机</li>
+            <li><img src="./images/index_sidenav_earphone1.jpg">小米头戴式耳机</li>
+            <li><img src="./images/index_sidenav_earphone1.jpg">小米头戴式耳机</li>
+            <li><img src="./images/index_sidenav_earphone1.jpg">小米头戴式耳机</li>
+          </ul>
+          <ul class="good-list">
+            <li><img src="./images/index_sidenav_earphone1.jpg">小米头戴式耳机</li>
+            <li><img src="./images/index_sidenav_earphone1.jpg">小米头戴式耳机</li>
+            <li><img src="./images/index_sidenav_earphone1.jpg">小米头戴式耳机</li>
+            <li><img src="./images/index_sidenav_earphone1.jpg">小米头戴式耳机</li>
+            <li><img src="./images/index_sidenav_earphone1.jpg">小米头戴式耳机</li>
+            <li><img src="./images/index_sidenav_earphone1.jpg">小米头戴式耳机</li>
+          </ul>
+          <ul class="good-list">
+            <li><img src="./images/index_sidenav_earphone1.jpg">小米头戴式耳机</li>
+            <li><img src="./images/index_sidenav_earphone1.jpg">小米头戴式耳机</li>
+          </ul>
+        </div>
+      </li>
+      <li class="category-list-li">
+        <a href="#"><span>保护套</span> <span>后盖</span></a>
+        <div class="contents">
+          <ul class="good-list">
+            <li><img src="./images/index_sidenav_protect1.jpg">保护套 保护壳</li>
+            <li><img src="./images/index_sidenav_protect1.jpg">保护套 保护壳</li>
+          </ul>
+        </div>
+      </li>
+      <li class="category-list-li">
+        <a href="#"><span>贴膜</span> <span>其他配件</span></a>
+        <div class="contents">
+          <ul class="good-list">
+            <li><img src="./images/index_sidenav_pole1.jpg">自拍杆</li>
+            <li><img src="./images/index_sidenav_pole1.jpg">自拍杆</li>
+            <li><img src="./images/index_sidenav_pole1.jpg">自拍杆</li>
+            <li><img src="./images/index_sidenav_pole1.jpg">自拍杆</li>
+            <li><img src="./images/index_sidenav_pole1.jpg">自拍杆</li>
+            <li><img src="./images/index_sidenav_pole1.jpg">自拍杆</li>
+          </ul>
+        </div>
+      </li>
+      <li class="category-list-li">
+        <a href="#"><span>米兔</span> <span>服装</a>
+        <div class="contents">
+          <ul class="good-list">
+            <li><img src="./images/index_sidenav_rubit1.jpg">米兔</li>
+            <li><img src="./images/index_sidenav_rubit1.jpg">米兔</li>
+            <li><img src="./images/index_sidenav_rubit1.jpg">米兔</li>
+            <li><img src="./images/index_sidenav_rubit1.jpg">米兔</li>
+          </ul>
+        </div>
+
+      </li>
+      <li class="category-list-li">
+        <a href="#"><span>箱包</span> <span>其他周边</span></a>
+        <div class="contents">
+          <ul class="good-list">
+            <li><img src="./images/index_sidenav_bag1.jpg">箱包</li>
+            <li><img src="./images/index_sidenav_bag1.jpg">箱包</li>
+            <li><img src="./images/index_sidenav_bag1.jpg">箱包</li>
+            <li><img src="./images/index_sidenav_bag1.jpg">箱包</li>
+          </ul>
+        </div>
+      </li>
+    </ul>
+  </aside>
+</div>
+
+<!--//aside-->
+<!-- 主体 -->
 <div class="about">
   <!-- about-top -->
   <div class="agileits-about-top">
@@ -139,15 +328,15 @@
           <!-- 轮播（Carousel）项目 -->
           <div class="carousel-inner">
             <div class="item active">
-              <img src="https://www.catchat.org/shop/image/cache/catalog/2017-slider-gifts-1100x280.jpg"
+              <img src="https://img.gzzhitu.com/zhitu-api/1554796860158.jpg"
                    alt="First slide">
             </div>
             <div class="item">
-              <img src="https://www.catchat.org/shop/image/cache/catalog/2017-slider-mugs-1100x280.jpg"
+              <img src="https://img.gzzhitu.com/zhitu-api/1554796897236.jpg"
                    alt="Second slide">
             </div>
             <div class="item">
-              <img src="https://www.catchat.org/shop/image/cache/catalog/2017-slider-stationery-1100x280.jpg"
+              <img src="https://img.gzzhitu.com/zhitu-api/1554796897236.jpg"
                    alt="Third slide">
             </div>
           </div>
@@ -270,7 +459,7 @@
   </div>
   <!-- //team -->
 </div>
-<!-- //about -->
+<!-- //主体 -->
 <!-- footer -->
 <footer>
   <div class="container">
