--- a/publish.html
+++ b/publish.html
@@ -48,7 +48,10 @@
       <div class="header-left">
         <div class="w3layouts-logo">
           <h1>
-            <a href="index.html">Cat <span>Club</span></a>
+            <a href="index.html">
+              <!--              Cat <span>Club</span>-->
+              <img src="https://img.gzzhitu.com/zhitu-api/1554778293916.png" alt="" id="logo">
+            </a>
           </h1>
         </div>
       </div>
@@ -103,7 +106,8 @@
   </div>
   <div class="about-heading">
     <div class="container">
-      <h2>发布救助</h2>
+      <img src="https://img.gzzhitu.com/zhitu-api/1554802234687.png" alt="" style="display: block;margin: 0 auto;">
+<!--      <h2>发布救助</h2>-->
     </div>
   </div>
 </div>
