--- a/support.html
+++ b/support.html
@@ -57,7 +57,10 @@
       <div class="header-left">
         <div class="w3layouts-logo">
           <h1>
-            <a href="index.html">Cat <span>Club</span></a>
+            <a href="index.html">
+              <!--              Cat <span>Club</span>-->
+              <img src="https://img.gzzhitu.com/zhitu-api/1554778293916.png" alt="" id="logo">
+            </a>
           </h1>
         </div>
       </div>
